# GrapiX

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.claude/: launch.json
apps/desktop-electron/: package.json  tsconfig.json
apps/desktop-electron/src/: main.ts  preload.ts
apps/editor-web/: index.html  package.json  tsconfig.json
apps/editor-web/src/: App.tsx  styles.css
apps/editor-web/src/components/: AssetMaterialPanel.tsx  BottomWorkbench.tsx  CanvasStage.tsx  Collapsible.tsx  DataPanel.tsx  DockWorkspace.tsx  GpuSceneStage.tsx  Inspector.tsx  LayoutTabs.tsx  LeftRail.tsx  MenuBar.tsx  ObjectLibrary.tsx  ProjectManager.tsx  PropertiesSidebar.tsx  ReferenceTopBar.tsx  SceneInspector.tsx  SceneManager.tsx  StatusBar.tsx  TemplatesPanel.tsx  TimelinePanel.tsx  (+2 more)
docs/: architecture.md  material-system.md  project-memory.md  render-daemon-architecture.md  rendering-engine.md
materials/: README.md
samples/: material-manager-v1.scene.json
services/api-server/: package.json  tsconfig.json
services/api-server/src/: index.ts  packageBuilder.ts  renderDaemon.ts  storage.ts
services/render-daemon/: Cargo.toml  README.md
services/render-daemon/src/: config.rs  controller.rs  lib.rs  main.rs  protocol.rs
services/render-daemon/src/output/: mod.rs  ndi.rs  null.rs
services/render-daemon/src/renderer/: frame.rs  gpu.rs  mod.rs  pipeline.rs
services/render-daemon/src/scene/: document.rs  mod.rs
services/render-daemon/src/transport/: mod.rs  websocket.rs
services/render-daemon/tests/: gpu_smoke.rs  layout_contract.rs  scene_contract.rs
(+19 files in other folders)
